[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/enemy_images_models/Sprite-0001-1.png" type="Texture" id=1]
[ext_resource path="res://enemy1.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54, 42.5 )

[node name="enemy1" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -10.5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_enemy1_area_entered"]
[connection signal="healthzero" from="." to="." method="_on_enemy1_healthzero"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
